backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: devopschallenge
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: app
          image: eminekibar/devopschallenge-backend:manual
          ports:
            - containerPort: 11130
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          startupProbe:
            tcpSocket:
              port: 11130
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet: { path: "/healthz", port: 11130 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/healthz", port: 11130 }
            initialDelaySeconds: 30
            periodSeconds: 20
        - name: loader
          image: busybox:1.36
          command: ["sh","-c","sleep 360000"]
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
