backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devopschallenge
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 11130
      targetPort: 11130
      nodePort: 31130
